# Godwit

./: .gitignore  CMakeLists.txt  README.md
atomic_experiments/: atomic-increment.cpp  atomic.cpp  cas.cpp  iam.c
configs/: sample-config.json
docs/: Godwit-Plans-Notes.svgz
include/: Hello.h
include/lol/: lol.h
notes/: Godwit-Plans-Notes.svgz
scripts/: build-visual-studio-windows.sh
src/: Hello.cpp  gwcommon.h  trial.cpp
src/client/: Hello.cpp  gw_client.cpp
src/gwutils/: gwutils.cpp  gwutils.h
src/lockfree/: lockfree.h  lockfreequeue.cpp
src/relay/: gw_relay.cpp
src/tcp/: gwtcp.cpp  gwtcp.h
src/tuntap/: gwtuntap.cpp  gwtuntap.h
